--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -1,123 +1,138 @@
 ---
 type Props = {
-    title?: string;
-    description?: string;
+  title?: string;
+  description?: string;
 };
 
-const {title, description} = Astro.props;
+const { title, description } = Astro.props;
 const pageTitle = title ? `${title} | EthanG` : "EthanG";
 const pageDescription = description ?? "Messin' around on the web sometimes.";
 ---
 
 <!doctype html>
-<html lang="en" data-theme="dark" class="selection:bg-info selection:text-base-300">
-<head>
-    <meta charset="utf8"/>
-    <meta name="viewport" content="width=device-width"/>
+<html
+  lang="en"
+  data-theme="dark"
+  class="selection:bg-info selection:text-base-300"
+>
+  <head>
+    <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <link rel="manifest" href="/site.webmanifest"/>
-    <meta name="theme-color" content="#1976d2"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Noto+Sans+Mono:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta name="generator" content={Astro.generator}/>
+    <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
-    <meta name="description" content={pageDescription}/>
-</head>
-<body>
-<div class="grid sm:grid-cols-[auto_1fr] gap-4">
-    <div class="hidden sm:block border-r-2 min-h-screen select-none">
+    <meta name="description" content={pageDescription} />
+  </head>
+  <body>
+    <div class="grid sm:grid-cols-[auto_1fr] gap-4">
+      <div class="hidden sm:block border-r-2 min-h-screen select-none">
         <h1 class="px-5 py-1 font-bold text-3xl mt-4">EthanG</h1>
         <nav class="grid gap-4" aria-label="Main">
-            <ul class="menu menu-sm">
-                <li>
-                    <a rel="prefetch" href="/" class="link text-base">Home</a>
-                </li>
-                <li>
-                    <a rel="prefetch" href="/courses" class="link text-base"
-                    >Courses</a
-                    >
-                </li>
-                <li><a class="link text-base"
-                       href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
-                       target="_blank">Newsletter</a></li>
-            </ul>
+          <ul class="menu menu-sm">
+            <li>
+              <a rel="prefetch" href="/" class="link text-base">Home</a>
+            </li>
+            <li>
+              <a rel="prefetch" href="/courses" class="link text-base"
+                >Courses</a
+              >
+            </li>
+            <li>
+              <a
+                class="link text-base"
+                href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
+                target="_blank">Newsletter</a>
+            </li>
+          </ul>
         </nav>
         <div class="divider mx-4"></div>
         <nav class="grid gap-4" aria-label="Social">
-            <ul class="menu menu-sm">
-                <li>
-                    <a
-                            href="https://www.linkedin.com/in/ethan-glover/"
-                            target="_blank"
-                            class="link text-base">LinkedIn</a
-                    >
-                </li>
-                <li>
-                    <a href="https://github.com/eglove" target="_blank" class="link text-base"
-                    >GitHub</a
-                    >
-                </li>
-                <li>
-                    <a
-                            href="https://frontendmasters.com/u/ethang/"
-                            target="_blank"
-                            class="link text-base">Frontend Masters</a
-                    >
-                </li>
-                <li>
-                    <a
-                            href="https://www.credly.com/users/ethang"
-                            target="_blank"
-                            class="link text-base">Credly</a
-                    >
-                </li>
-                <li>
-                    <a
-                            href="https://www.goodreads.com/user/show/6137062-ethan-glover"
-                            target="_blank"
-                            class="link text-base">Goodreads</a
-                    >
-                </li>
-                <li>
-                    <a
-                            href="https://www.khanacademy.org/profile/ethanglover/badges"
-                            target="_blank"
-                            class="link text-base">Khan Academy</a
-                    >
-                </li>
-            </ul>
+          <ul class="menu menu-sm">
+            <li>
+              <a
+                href="https://www.linkedin.com/in/ethan-glover/"
+                target="_blank"
+                class="link text-base">LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/eglove"
+                target="_blank"
+                class="link text-base">GitHub</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://frontendmasters.com/u/ethang/"
+                target="_blank"
+                class="link text-base">Frontend Masters</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.credly.com/users/ethang"
+                target="_blank"
+                class="link text-base">Credly</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.goodreads.com/user/show/6137062-ethan-glover"
+                target="_blank"
+                class="link text-base">Goodreads</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.khanacademy.org/profile/ethanglover/badges"
+                target="_blank"
+                class="link text-base">Khan Academy</a
+              >
+            </li>
+          </ul>
         </nav>
-    </div>
-    <div class="sm:hidden navbar bg-base-100 select-none">
+      </div>
+      <div class="sm:hidden navbar bg-base-100 select-none">
         <div class="navbar-start">
-            <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
+          <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
         </div>
         <nav class="navbar-center flex" aria-label="Main">
-            <ul class="menu menu-horizontal px-1">
-                <li>
-                    <a rel="prefetch" href="/" class="link text-base">Home</a>
-                </li>
-                <li>
-                    <a rel="prefetch" href="/courses" class="link text-base"
-                    >Courses</a
-                    >
-                </li>
-                <li><a class="link text-base"
-                       href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
-                       target="_blank">Newsletter</a></li>
-            </ul>
+          <ul class="menu menu-horizontal px-1">
+            <li>
+              <a rel="prefetch" href="/" class="link text-base">Home</a>
+            </li>
+            <li>
+              <a rel="prefetch" href="/courses" class="link text-base"
+                >Courses</a
+              >
+            </li>
+            <li>
+              <a
+                class="link text-base"
+                href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
+                target="_blank">Newsletter</a>
+            </li>
+          </ul>
         </nav>
+      </div>
+      <div id="main-content" class="m-4 sm:mx-0">
+        <slot />
+      </div>
     </div>
-    <div id="main-content" class="m-4 sm:mx-0">
-        <slot/>
-    </div>
-</div>
-</body>
+  </body>
 </html>
