--- a/apps/ethang-astro/src/pages/blog/state-management-classes.astro
+++ b/apps/ethang-astro/src/pages/blog/state-management-classes.astro
@@ -583,8 +583,10 @@ function JobApplicationsList() {
     </p>
 
     <p>
-      This approach is part of my broader philosophy on React development. For more insights on how I approach coding, 
-      check out my <a href="/blog/how-i-code">How I Code</a> guide.
+      This approach is part of my broader philosophy on React development. For
+      more insights on how I approach coding, check out my <a
+        href="/blog/how-i-code">How I Code</a
+      > guide.
     </p>
   </main>
 </Layout>
