--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -19,7 +19,8 @@ import Layout from "../layouts/Layout.astro";
     </h3>
     <h3>
       <a rel="prefetch" href="/blog/sealioning-in-remote-work"
-        >Navigating Sealioning in Remote Work Environments</a>
+        >Navigating Sealioning in Remote Work Environments</a
+      >
     </h3>
   </main>
 </Layout>
