--- a/apps/ethang-astro/src/components/LocalImage.astro
+++ b/apps/ethang-astro/src/components/LocalImage.astro
@@ -1,42 +1,43 @@
 ---
-import {Image} from "astro:assets";
-import type {ImageMetadata} from "astro";
-import {v7} from 'uuid';
-import {twMerge} from "tailwind-merge";
+import { Image } from "astro:assets";
+import type { ImageMetadata } from "astro";
+import { v7 } from "uuid";
+import { twMerge } from "tailwind-merge";
 
 type Props = {
-    alt: string;
-    src: ImageMetadata;
-    imgClass?: string;
-    loading?: "eager" | "lazy";
-}
+  alt: string;
+  src: ImageMetadata;
+  imgClass?: string;
+  loading?: "eager" | "lazy";
+};
 
-const {alt, src, imgClass, loading} = Astro.props;
-const id = `modal${v7().replaceAll('-', '')}`;
+const { alt, src, imgClass, loading } = Astro.props;
+const id = `modal${v7().replaceAll("-", "")}`;
 ---
 
-<button class="relative w-full h-auto overflow-hidden" onclick={`${id}.showModal()`}>
-    <Image
-            loading={loading}
-            class={twMerge("size-full object-contain my-0", imgClass)}
-            src={src}
-            alt={alt}
-    />
+<button
+  class="relative w-full h-auto overflow-hidden"
+  onclick={`${id}.showModal()`}
+>
+  <Image
+    loading={loading}
+    class={twMerge("size-full object-contain my-0", imgClass)}
+    src={src}
+    alt={alt}
+  />
 </button>
 <dialog id={id} class="modal">
-    <div class="modal-box p-0 max-w-max w-11/12">
-        <form method="dialog">
-            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
-        </form>
-        <button class="cursor-pointer" onclick={`${id}.close()`}>
-            <Image
-                    class="size-full object-contain m-0"
-                    src={src}
-                    alt={alt}
-            />
-        </button>
-    </div>
-    <form method="dialog" class="modal-backdrop">
-        <button>close</button>
+  <div class="modal-box p-0 max-w-max w-11/12">
+    <form method="dialog">
+      <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2"
+        >✕</button
+      >
     </form>
+    <button class="cursor-pointer" onclick={`${id}.close()`}>
+      <Image class="size-full object-contain m-0" src={src} alt={alt} />
+    </button>
+  </div>
+  <form method="dialog" class="modal-backdrop">
+    <button>close</button>
+  </form>
 </dialog>
