--- a/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
+++ b/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
@@ -210,8 +210,7 @@ const name = useSyncExternalStore(
       while extensions like TypeScript has helped elevate it into proper
       programming. I will always be the first to remind people that in the real
       world you're better off using a
-      <a
-        href="/blog/javascript-standard-library/"
+      <a href="/blog/javascript-standard-library/"
         >popular prewritten tool as if JavaScript had a standard library</a
       >.
     </p>
@@ -488,9 +487,10 @@ const name = useSyncExternalStore(
     </p>
 
     <p class="mt-8">
-      For more on my approach to React and state management, check out my 
+      For more on my approach to React and state management, check out my
       <a href="/blog/how-i-code#letsTalkAboutReact">Let's Talk About React</a>
-      section in my <a href="/blog/how-i-code">How I Code</a> guide, where I discuss React's strengths and limitations.
+      section in my <a href="/blog/how-i-code">How I Code</a> guide, where I discuss
+      React's strengths and limitations.
     </p>
   </main>
 </Layout>
