--- a/apps/ethang-astro/src/pages/blog/javascript-standard-library.astro
+++ b/apps/ethang-astro/src/pages/blog/javascript-standard-library.astro
@@ -442,8 +442,11 @@ import Layout from "../../layouts/Layout.astro";
     </div>
 
     <p class="mt-8">
-      For more on my approach to JavaScript, TypeScript, and utility libraries, check out my 
-      <a href="/blog/how-i-code#lodashAndUtilityLibraries">Lodash and Utility Libraries</a>
+      For more on my approach to JavaScript, TypeScript, and utility libraries,
+      check out my
+      <a href="/blog/how-i-code#lodashAndUtilityLibraries"
+        >Lodash and Utility Libraries</a
+      >
       section in my <a href="/blog/how-i-code">How I Code</a> guide.
     </p>
   </main>
