--- a/apps/ethang-astro/src/pages/blog/sealioning-in-remote-work.astro
+++ b/apps/ethang-astro/src/pages/blog/sealioning-in-remote-work.astro
@@ -477,7 +477,7 @@ import sealioning3Image from "../../images/sealioning/sealioning-3.png";
       </p>
 
       <div class="chat chat-start">
-        <div class="chat-header">Colleague</div>
+        <div class="chat-header">You</div>
         <div class="chat-bubble chat-bubble-secondary">
           2+2=4
         </div>
