--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -18,6 +18,11 @@ import Layout from "../layouts/Layout.astro";
       >
     </h3>
     <h3>
+      <a rel="prefetch" href="/blog/understanding-recovering-from-burnout"
+        >Navigating the Depths of Exhaustion: Understanding and Recovering from
+        Burnout</a>
+    </h3>
+    <h3>
       <a rel="prefetch" href="/blog/sealioning-in-remote-work"
         >Navigating Sealioning in Remote Work Environments</a
       >
