select none on toc

--- a/apps/ethang-astro/src/pages/blog/understanding-recovering-from-burnout.astro
+++ b/apps/ethang-astro/src/pages/blog/understanding-recovering-from-burnout.astro
@@ -58,7 +58,7 @@ import LocalImage from "../../components/LocalImage.astro";
             effects, and most importantly, how to navigate your way back to a state of
             well-being.
         </p>
-        <ul>
+        <ul class="select-none">
             <li><a href="#personalStory">A Personal Journey into Burnout</a></li>
             <li><a href="#whatIsBurnout">What Is Burnout?</a></li>
             <li>
