--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -8,6 +8,7 @@ import chromaticSwirl from "../images/chromatic-swirl.png";
 import optionalChainingImage from "../images/optional-chaining.png";
 import personAtCrossroads from "../images/person-at-crossroads.png"
 import sealioningImage from "../images/sealioning/sealioning.png";
+import aiParadoxImage from "../images/ai-paradox.png";
 
 const cards = [
     {
@@ -39,6 +40,12 @@ const cards = [
         alt: "sealioning comic",
         title: "Navigating Sealioning in Remote Work Environments",
         href: "/blog/sealioning-in-remote-work",
+    },
+    {
+        src: aiParadoxImage,
+        alt: `An abstract image illustrating the "AI Paradox." On the left, a developer appears overwhelmed, with hands on their head amidst complex, swirling code and abstract AI elements. On the right, another developer looks confident and a bit triumphant, surrounded by organized code and circuit-like patterns, representing the revolutionary potential of AI. The background is a mix of digital patterns and glowing lines, symbolizing the digital world and the evolving tech landscape.`,
+        title: "The AI Paradox: Why Some Developers Are Underwhelmed and Others See a Revolution",
+        href: "/blog/ai-paradox"
     }
 ]
 ---
