--- a/apps/ethang-astro/src/pages/blog/ai-paradox.astro
+++ b/apps/ethang-astro/src/pages/blog/ai-paradox.astro
@@ -2,6 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 import aiParadoxImage from "../../images/ai-paradox.png";
 import LocalImage from "../../components/LocalImage.astro";
+import WordCount from "../../components/WordCount.astro";
 ---
 
 <Layout title="The AI Paradox">
@@ -10,9 +11,10 @@ import LocalImage from "../../components/LocalImage.astro";
       The AI Paradox: Why Some Developers Are Underwhelmed and Others See a
       Revolution
     </h1>
+    <WordCount />
     <LocalImage src={aiParadoxImage} alt={`An abstract image illustrating the "AI Paradox." On the left, a developer appears overwhelmed, with hands on their head amidst complex, swirling code and abstract AI elements. On the right, another developer looks confident and a bit triumphant, surrounded by organized code and circuit-like patterns, representing the revolutionary potential of AI. The background is a mix of digital patterns and glowing lines, symbolizing the digital world and the evolving tech landscape.`} />
 
-    <ul>
+    <ul class="select-none">
       <li><a href="#magicEye">The "Magic Eye" of Development: Differing Realities</a></li>
       <li><a href="#architectsGaze">The Architect's Gaze: A Different Landscape</a></li>
       <li><a href="#realWorld">Real-World Architectural Challenges vs. AI's Current Strengths</a></li>
